Fix mobile spacing

--- a/style.css
+++ b/style.css
@@ -105,11 +105,11 @@ button:active {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 0.25em;
   }
 
   .message {
     width: 100vw;
-    height: 1em;
     text-align: center;
     margin-bottom: 0.5em;
   }
